--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,6 @@ dependencies = [
     "langchain-openai>=0.3.22",
     "mcp[cli]>=1.9.3",
     "openai>=1.86.0",
+    "pdfplumber>=0.11.7",
     "pypdf>=5.6.0",
 ]
